# RustSyncCV-Client

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  cargo.toml  config.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/: cliff.toml
.github/workflows/: build.yml  release.yml
CLI/: Cargo.toml
CLI/settings/: index.html
CLI/src/: clipboard.rs  config.rs  main.rs  messages.rs
GUI/: Cargo.toml
GUI/src/: main.rs  windows_material.rs
GUI/src/runtime/: clipboard.rs  config.rs  mod.rs
GUI/ui/: main.slint
doc/dev/: development.md
src/: App.tsx  clipboard.rs  config.rs  index.css  main.rs  main.tsx  messages.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  events.rs  log.rs  main.rs  state.rs  syseffects.rs  tray.rs
src-tauri/src/runtime/: clipboard.rs  config.rs  messages.rs  mod.rs
src-tauri/src/runtime/lan/: discovery.rs  mod.rs  peer.rs  protocol.rs
src/components/: MainWindow.tsx  SettingsWindow.tsx
src/components/ui/: Styles.tsx
src/i18n/: config.ts
src/i18n/locales/: en_US.ts  zh_CN.ts
