[package]
name = "clipsync_rust_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
 tokio = { version = "1.28", features = ["full"] }
# WebSocket client with TLS
tokio-tungstenite = { version = "0.27", features = ["__rustls-tls"] }
# Futures utilities
 futures = "0.3"
 futures-util = "0.3"
# Clipboard access
arboard = "3.6"
# Serialization
serde = "1.0"
serde_json = "1.0"
# Configuration file parsing
toml = "0.9"
# Base64 encoding for image data
base64 = "0.22"
# UUID for device identifier
 uuid = { version = "1.3", features = ["v4"] }
dirs = "6.0"
anyhow = "1.0"
url = "2.3"
