[package]
name = "RustSyncCV-Client-GUI"
version = "0.4.4"
edition = "2021"

[dependencies]
slint = { version = "1.8", features = ["backend-winit", "renderer-femtovg", "unstable-winit-030"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "process", "sync", "time", "io-util", "net"] }
tokio-tungstenite = { version = "0.27", features = ["__rustls-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
url = "2.3"
uuid = { version = "1.3", features = ["v4"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "0.26"
base64 = "0.22"
arboard = "3.6"
image = "0.25"
tokio-util = "0.7"
tray-icon = "0.21"
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
notify = "6.1"
log = "0.4"
simplelog = "0.12"

[build-dependencies]
slint-build = "1.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = [
	"Win32_Foundation",
	"Win32_Graphics_Dwm",
	"Win32_UI_WindowsAndMessaging",
] }
