[package]
name = "rust-sync-cv-client"
version = "0.5.0"
description = "RustSyncCV Client"
authors = ["Author"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.5"
window-shadows = "0.2"

# Original Dependencies
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "process", "sync", "time", "io-util", "net"] }
tokio-tungstenite = { version = "0.27", features = ["__rustls-tls"] }
futures-util = "0.3"
toml = "0.8"
url = "2.3"
uuid = { version = "1.3", features = ["v4"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "0.26"
base64 = "0.22"
arboard = "3.6"
image = "0.25"
tokio-util = "0.7"
tray-icon = "0.21"
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
notify = "6.1"
log = "0.4"
simplelog = "0.12"
tauri-plugin-store = "2.4.2"
tauri-plugin-autostart = "2.5.1"

[features]
# custom-protocol is handled by tauri config in v2
custom-protocol = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = [
	"Win32_Foundation",
	"Win32_Graphics_Dwm",
	"Win32_UI_WindowsAndMessaging",
] }
